Fixed btn visibility issue

--- a/resources/assets/sass/api-tester.sass
+++ b/resources/assets/sass/api-tester.sass
@@ -50,7 +50,7 @@ html
 .button.is-white
   color: #fff
 
-.button.is-white .fa-refresh
+.button.is-white .fa,
   color: #000
 
 a:hover
